--- a/game.ipynb
+++ b/game.ipynb
@@ -2,67 +2,82 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Игра угадай число"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from game_v2 import score_game\n",
     "from game_v2 import random_predict"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Угадываем рандомно"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "source": [
-    "score_game(random_predict)"
-   ],
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Ваш алгоритм угадывает число в среднем за:101 попыток\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Администратор\\OneDrive\\Работа\\Data Science\\guess-number-task\\game.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B0%D1%82%D0%BE%D1%80/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%82%D0%B0/Data%20Science/guess-number-task/game.ipynb#ch0000003?line=0'>1</a>\u001b[0m score_game(random_predict)\n",
+      "File \u001b[1;32mc:\\Users\\Администратор\\OneDrive\\Работа\\Data Science\\guess-number-task\\game_v2.py:65\u001b[0m, in \u001b[0;36mscore_game\u001b[1;34m(random_predict)\u001b[0m\n\u001b[0;32m     62\u001b[0m random_array \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, \u001b[39m101\u001b[39m, size\u001b[39m=\u001b[39m(\u001b[39m1000\u001b[39m))  \u001b[39m# загадали список чисел\u001b[39;00m\n\u001b[0;32m     64\u001b[0m \u001b[39mfor\u001b[39;00m number \u001b[39min\u001b[39;00m random_array:\n\u001b[1;32m---> 65\u001b[0m     count_ls\u001b[39m.\u001b[39mappend(random_predict(number))\n\u001b[0;32m     67\u001b[0m score \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(np\u001b[39m.\u001b[39mmean(count_ls))\n\u001b[0;32m     68\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mВаш алгоритм угадывает число в среднем за:\u001b[39m\u001b[39m{\u001b[39;00mscore\u001b[39m}\u001b[39;00m\u001b[39m попыток\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Администратор\\OneDrive\\Работа\\Data Science\\guess-number-task\\game_v2.py:26\u001b[0m, in \u001b[0;36mrandom_predict\u001b[1;34m(number)\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[39mbreak\u001b[39;00m \u001b[39m# выход из цикла, если угадали\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[39melif\u001b[39;00m number \u001b[39m>\u001b[39m predict_number:\n\u001b[1;32m---> 26\u001b[0m     predict_number\u001b[39m=\u001b[39mpredict_number\u001b[39m/\u001b[39;49m\u001b[39m2\u001b[39;49m\n\u001b[0;32m     27\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     28\u001b[0m     predict_number\u001b[39m=\u001b[39mpredict_number\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "101"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
     }
    ],
-   "metadata": {}
+   "source": [
+    "score_game(random_predict)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit (system)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "23cc1b66c21dd8db2fc452c49f8d8f03bfd0fee26288ec500675dffed698a47b"
+   }
   }
  },
  "nbformat": 4,
